--- a/codigo/Makefile
+++ b/codigo/Makefile
@@ -6,7 +6,7 @@
 #    By: frivas <frivas@student.42.fr>              +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2025/03/18 17:27:37 by brivera           #+#    #+#              #
-#    Updated: 2025/04/30 15:23:07 by frivas           ###   ########.fr        #
+#    Updated: 2025/05/03 10:55:07 by frivas           ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -42,7 +42,8 @@ PARCE 		:=	$(PARCE_DIR)ms_input_row_validation.c \
 				$(PARCE_DIR)ms_split_input.c $(PARCE_DIR)ms_expand_variable.c \
 				$(PARCE_DIR)ms_quotes_killer.c $(PARCE_DIR)ms_redir_together.c \
 				$(PARCE_DIR)ms_token_input.c $(PARCE_DIR)ms_orquest.c \
-				$(PARCE_DIR)ms_orquest_command.c $(PARCE_DIR)ms_expand_variable_special.c
+				$(PARCE_DIR)ms_orquest_command.c $(PARCE_DIR)ms_expand_variable_special.c \
+				$(PARCE_DIR)ms_orquest_redir.c
 
 UTILS		:=	$(UTILS_DIR)utils.c $(UTILS_DIR)ft_isspace.c $(UTILS_DIR)ft_print_array.c \
 				$(UTILS_DIR)ft_list_remove_if.c $(UTILS_DIR)ft_split_quotes.c \
