--- a/codigo/Makefile
+++ b/codigo/Makefile
@@ -6,7 +6,7 @@
 #    By: frivas <frivas@student.42.fr>              +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2025/03/18 17:27:37 by brivera           #+#    #+#              #
-#    Updated: 2025/05/19 15:09:03 by frivas           ###   ########.fr        #
+#    Updated: 2025/05/20 16:01:30 by frivas           ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -31,7 +31,8 @@ BUILT		:=	$(BUILT_INS_DIR)cd.c $(BUILT_INS_DIR)env.c \
 				$(BUILT_INS_DIR)export_00.c $(BUILT_INS_DIR)export_01.c \
 				$(BUILT_INS_DIR)export_02.c \
 				$(BUILT_INS_DIR)unset.c $(BUILT_INS_DIR)exit.c \
-				$(BUILT_INS_DIR)pwd.c $(BUILT_INS_DIR)echo.c
+				$(BUILT_INS_DIR)pwd.c $(BUILT_INS_DIR)echo.c \
+				$(BUILT_INS_DIR)cd_01.c
 EXECUTION	:=	$(EXECUTION_DIR)ms_execution.c $(EXECUTION_DIR)ms_redir_management.c \
 				$(EXECUTION_DIR)ms_heredoc_management.c $(EXECUTION_DIR)ms_simple_execution.c \
 				$(EXECUTION_DIR)ms_exec_other_onecommand.c $(EXECUTION_DIR)ms_execution_utils.c \
@@ -55,7 +56,8 @@ UTILS		:=	$(UTILS_DIR)utils.c $(UTILS_DIR)ft_isspace.c $(UTILS_DIR)ft_print_arra
 				$(UTILS_DIR)ft_split_pipes.c $(UTILS_DIR)ft_list_extract_if.c \
 				$(UTILS_DIR)ft_free_memory.c $(UTILS_DIR)ft_special_char.c \
 				$(UTILS_DIR)ms_update_prompt.c $(UTILS_DIR)ms_get_cwd.c \
-				$(UTILS_DIR)ft_print_error.c $(UTILS_DIR)ft_close_heredoc_fds.c
+				$(UTILS_DIR)ft_print_error.c $(UTILS_DIR)ft_close_heredoc_fds.c \
+				$(UTILS_DIR)ms_qd_killer.c
 
 SRC 		:=	$(SOURCES) $(BUILT) $(EXECUTION) $(INITIAL) $(PARCE) $(UTILS)
 
